# Python-w-ZN

./: README.md  hello_world.py  pyproject.toml
Projekty/: boardgames.json  films.json  grimcoven.json
Projekty/Lab1/: program1.py  test.txt
Projekty/Lab2/: program2.py
Projekty/Lab3/: program3.py
Projekty/Lab4/: program4.py
Projekty/Lab5/: program  program 5_2.py  program5.py
Projekty/Lab6/: program6.py
Projekty/Lab7/: program7.py
Projekty/Testy/: argparse001.py  argumenst001.py  ascii_graph001.py  copilottest.py  defaultdict001.py  generators001.py  objects001.py  pillow001.py  rich001.py  selenium.002.py  selenium001.py  static_scraping.py  tqdm001.py
Projekty/Testy/Dekoratory/: decorators001.py  decorators002.py  decorators003.py  decorators004.py  decorators005.py  decorators006.py  decorators007.py  decorators008.py  decorators009.py
